probably fixed text overflow in cards titles

--- a/blocks/elements/__title/elements__title.css
+++ b/blocks/elements/__title/elements__title.css
@@ -1,10 +1,10 @@
 .elements__title{
     color: #000000;
     margin: 0;
-    max-width: 88%;
+    font-size: 24px;
+    font-weight: 900;
+    max-width: 80%;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    font-size: 24px;
-    font-weight: 900;
 }
